Fixed Word Wrapping two

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 {
   position:fixed;
   text-align: unset;
   font-size: 20px;
-  width: 0vw;
+  width: 2vw;
   font-family: "Rubik", sans-serif;
   letter-spacing: 0.3em;
   color: #000000;
